--- a/_posts/2021-08-02-30_ML.md
+++ b/_posts/2021-08-02-30_ML.md
@@ -16,11 +16,11 @@ toc:  true
     gtag('config', 'G-TG0XJZG53F');
   </script>
 
-### Lesson 1 (Hello Python)
+## <font color= 977FD7> Lesson 1 (Hello Python) </font>
 
 This course covers the key Python skills you’ll need so you can start using Python for data science.
 
-***Hello, Python!***
+#### <font color= 6FBCE1> Hello, Python! </font>
 
 Python was named for the British comedy troupe Monty Python, so we'll make our first Python program a homage to their skit about Spam.
 
@@ -116,7 +116,7 @@ Spam Spam Spam Spam
 
 The ```*``` operator can be used to multiply two numbers (```3 * 3``` evaluates to 9), but we can also multiply a string by a number, to get a version that's been repeated that many times. Python offers a number of cheeky little time-saving tricks like this where operators like ```*``` and ```+``` have a different meaning depending on what kind of thing they're applied to. (The technical term for this is operator overloading.)
 
-***Numbers and arithmetic in Python***
+#### <font color= 6FBCE1> Numbers and arithmetic in Python </font>
 
 We've already seen an example of a variable containing a number above:
 
@@ -187,7 +187,7 @@ OUTPUT:
 3
 ```
 
-***Order of operations***
+#### <font color= 6FBCE1> Order of operations </font>
 
 The arithmetic we learned in primary school has conventions about the order in which operations are evaluated. Some remember these by a mnemonic such as PEMDAS - Parentheses, Exponents, Multiplication/Division, Addition/Subtraction.
 
@@ -231,7 +231,7 @@ OUTPUT:
 Height in meters = 2.15
 ```
 
-***Builtin functions for working with numbers***
+#### <font color= 6FBCE1> Builtin functions for working with numbers </font>
 
 min and max return the minimum and maximum of their arguments, respectively...
 
@@ -269,30 +269,78 @@ OUTPUT:
 808
 ```
 
-###  Exercise: Syntax, Variables, and Numbers
+## <font color= 977FD7> Exercise: Syntax, Variables, and Numbers </font>
 
 ```python
+pi = 3.14159 # approximate
+diameter = 3
 
-------------------
-OUTPUT:
+# Create a variable called 'radius' equal to half the diameter
+radius = diameter/2
+____
+
+# Create a variable called 'area', using the formula for the area of a circle: pi times the radius squared
+area = pi * radius**2
+```
+
+```python
+########### Setup code - don't touch this part ######################
+# If you're curious, these are examples of lists. We'll talk about
+# them in depth a few lessons from now. For now, just know that they're
+# yet another type of Python object, like int or float.
+a = [1, 2, 3]
+b = [3, 2, 1]
+q2.store_original_ids()
+######################################################################
+
+# Your code goes here. Swap the values to which a and b refer.
+# If you get stuck, you can always uncomment one or both of the lines in
+# the next cell for a hint, or to peek at the solution.
+
+c = a
+a = b
+b = c
+
+Correct:
+
+# The most straightforward solution is to use a third variable
+# to temporarily store one of the old values. e.g.:
+#
+# tmp = a
+# a = b
+# b = tmp
+# If you've read lots of Python code, you might have seen the
+# following trick to swap two variables in one line:
+
+# a, b = b, a
+# We'll demystify this bit of Python magic later when we talk about tuples.
 ```
 
 
-
 ```python
+# Alice, Bob and Carol have agreed to pool their Halloween candy
+# and split it evenly among themselves. For the sake of their
+# friendship, any candies left over will be smashed. For example,
+# if they collectively bring home 91 candies, they'll take 30
+# each and smash 1.
 
-------------------
-OUTPUT:
+# Write an arithmetic expression below to calculate how many candies
+# they must smash for a given haul.
+
+# Variables representing the number of candies collected by alice, bob, and carol
+alice_candies = 121
+bob_candies = 77
+carol_candies = 109
+
+# Your code goes here! Replace the right-hand side of this assignment with an expression
+# involving alice_candies, bob_candies, and carol_candies
+
+to_smash = (alice_candies + bob_candies + carol_candies) % 3
 ```
 
+## <font color= 977FD7> Lesson 2 (Functions and Getting Help) </font>
 
-```python
-
-------------------
-OUTPUT:
-```
-
-
+#### <font color= 6FBCE1> Getting Help </font>
 
 ```python
 
