--- a/_posts/2020-10-21-food.md
+++ b/_posts/2020-10-21-food.md
@@ -20,6 +20,17 @@ toc:  true
 
 ![](https://joy3luo.github.io/mathnotes/pics/food/1.jpg)
 
-<font color= 977FD7> Niven's Theorem</font>
-
 This festive white chocolate cranberry tart is so incredibly smooth and creamy, you’re gonna be in heaven. It’s decadent filling is so delicious with no baking required. The perfect dessert to bring to any holiday party.
+
+这个节日限定的白巧克力蔓越莓馅饼口感非常丝滑和绵密，你一定会非常喜欢。 它的馅料是如此美味，而且做法无需烘烤。 非常适合任何节日派对。
+
+![](https://joy3luo.github.io/mathnotes/pics/food/2.jpg)
+
+It might look like a lot of work but this tart is deceptively simple and takes less than 30 minutes to prepare. How can you resist that offer?
+
+这个美味的馅饼看起来做起来非常麻烦，但是其实准备时间不到 30 分钟。 这么简单怎么能不试试做？
+
+**I’ve Left The Secret For You Here**
+* In a medium sized pan add water and maple syrup. Heat over medium to high heat until it starts to bubble. Simmer for a couple minutes, then add the cranberries. Simmer for another 5-10 minutes over low heat until almost now liquid remains. It will appear very stick, similar to caramel sugar.
+
+* Transfer onto a cooling rack and let them sit for about 1-2 minutes. Then place them in a bowl or onto a plate filled with either monk fruit sweetener or granulated sugars. Coat them well and transfer back onto a cooling rack. Let them dry until maple has hardened and sugar is stuck to the cranberries.
