--- a/_posts/2020-10-21-food.md
+++ b/_posts/2020-10-21-food.md
@@ -32,12 +32,61 @@ It might look like a lot of work but this tart is deceptively simple and takes l
 
 ![](https://joy3luo.github.io/mathnotes/pics/food/3.jpg)
 
+In case you were wondering how to prepare these gorgeous looking cranberries…
+
+如果你想知道怎么做这个诱人的树莓果酱
+
+Ingredients:
+1 cup cranberries
+1/4 cup maple syrup
+1/4 cup water
+1/4 cup monk fruit sweetener (or granulated cane sugar)
+
+需要用到的东西：
+1 杯 蔓越莓
+1/4 杯 枫糖浆
+1/4 杯 水
+1/4 杯 砂糖
+
+![](https://joy3luo.github.io/mathnotes/pics/food/4.jpg)
+
 **I’ve Left The Secret For You Here**
 * In a medium sized pan add water and maple syrup. Heat over medium to high heat until it starts to bubble. Simmer for a couple minutes, then add the cranberries. Simmer for another 5-10 minutes over low heat until almost now liquid remains. It will appear very stick, similar to caramel sugar.
 
 * Transfer onto a cooling rack and let them sit for about 1-2 minutes. Then place them in a bowl or onto a plate filled with either monk fruit sweetener or granulated sugars. Coat them well and transfer back onto a cooling rack. Let them dry until maple has hardened and sugar is stuck to the cranberries.
 
-**祖传秘方**
+**制作树莓果酱的祖传秘方**
 * 高端的食材往往只需要最简单的烹饪方式，你只需要在一个中号的平底锅中加入水和枫糖浆。 用中到高火加热，加热到它开始冒泡泡就可以啦。 炖他个几分钟，然后加入蔓越莓。 用小火再炖个 5-10 分钟，炖到粘稠的程度。 它这时候应该是黏糊糊的，类似于焦糖的感觉。
 
 * 转移到一个可以冷却它的地方，让它们静置约 1-2 分钟。 然后把它们放在一个碗里或一个装满糖的盘子里。 把它包裹上糖粉，然后转移回冷却的地方。 让它干燥一会儿，直到枫树变硬并且糖粘在蔓越莓上。
+
+#### Ingredients
+crust
+* 1/2 cups gluten-free oats
+* 1/2 cup raw almonds
+* 5 tbsp coconut oil (melted)**
+* 2 tbsp maple syrup
+
+cranberry layer
+* 2 cups cranberries (fresh or frozen)
+* 1 cup water
+* 1/4 cup maple syrup
+* 1 tsp agar agar (substitute with gelatin powder 1:1 ratio)
+
+white chocolate layer
+* ⅔ cup coconut milk (sub with cashew milk)
+* 1 cup raw cashews (soaked*)
+* ¾ cup cacao butter (sub with vegan white chocolate), melted and cooled
+* 1/3 cup maple syrup
+Pinch of salt
+* 4 tbsp vegan white chocolate, melted and cooled
+
+Instructions
+For the crust add oats and almonds into a food processor. Pulse until combined and add maple syrup and coconut oil. Process into a moist mixture. Firmly press dough into the tart and press up on the sides as well. Bake at 350F for about 10-15 minutes until crust appears golden brown. Let sit for about 5-10 minutes and then transfer onto a cooling rack.
+
+In a small saucepan add cranberries, water and maple syrup. Simmer for about 10-15 minutes over low-medium heat until cranberries have broken down. With a hand mixer puree cranberries and add a little bit of water if sauce is too thick. Add 1 tsp of agar agar powder (or gelatin powder) and simmer for another 5 minutes over low-medium heat. Set aside to cool for a couple minutes, then spread cranberry jam/sauce into the crust (½ way full) and let set in the fridge for another 15 minutes.
+
+In the meantime prepare the white chocolate layer. Melt white chocolate and cacao butter in a small saucepan over low heat and set aside.
+
+In a food processor or high speed blender add cashews, maple syrup and coconut milk. Process until completely smooth. Add melted chocolate/cacao butter and process until combined. Pour white chocolate mixture into the tart and let set in the refrigerator for about 2-3 hours. Garnish with sugar coated cranberries and white chocolate chips and serve immediately.
+Store leftovers in the refrigerator for up to 3 days.
