--- a/_posts/2020-10-21-food.md
+++ b/_posts/2020-10-21-food.md
@@ -121,3 +121,6 @@ Store leftovers in the refrigerator for up to 3 days.
 * 接着做馅料吧，在小平底锅中加入蔓越莓、水和枫糖浆。用中低火炖约 10-15 分钟，直到蔓越莓分解。用搅拌机将蔓越莓泥搅成泥，如果酱汁太浓，可以加一点水。加入 1 茶匙琼脂粉（或明胶粉），用中低火再炖 5 分钟。放置一旁冷却几分钟，然后将蔓越莓果酱/酱汁涂抹在饼底中（½ 满），然后再放入冰箱冷却 15 分钟。
 * 现在可以准备白巧克力层了。在小平底锅中用小火融化白巧克力和可可脂，放在一边。
 * 在搅拌机中加入腰果、枫糖浆和椰奶。搅拌至完全丝滑。加入融化的可可脂并搅拌至混合。将白巧克力混合物倒入刚刚的馅饼上，放入冰箱约 2-3 小时。用糖衣蔓越莓和白巧克力片装饰，这就做好啦。最好 3 天内吃掉i哦。
+
+### Christmas Sangria / 圣诞桑格利亚汽酒
+![](https://joy3luo.github.io/mathnotes/pics/food/5.jpg)
