--- a/_posts/2020-10-21-food.md
+++ b/_posts/2020-10-21-food.md
@@ -120,7 +120,46 @@ Store leftovers in the refrigerator for up to 3 days.
 * 咱先做饼底吧，将燕麦和杏仁加入搅拌机中。搅拌一会儿加入枫糖浆和椰子油接着搅拌。变成糊状的就差不多了。用力将面团压入这个搅拌好的混合物中。揉吧揉吧让后去烘烤， 350华氏度下 下烘烤约 10-15 分钟，直到外壳呈金黄色。静置 5-10 分钟，然后转移到冷却架上。
 * 接着做馅料吧，在小平底锅中加入蔓越莓、水和枫糖浆。用中低火炖约 10-15 分钟，直到蔓越莓分解。用搅拌机将蔓越莓泥搅成泥，如果酱汁太浓，可以加一点水。加入 1 茶匙琼脂粉（或明胶粉），用中低火再炖 5 分钟。放置一旁冷却几分钟，然后将蔓越莓果酱/酱汁涂抹在饼底中（½ 满），然后再放入冰箱冷却 15 分钟。
 * 现在可以准备白巧克力层了。在小平底锅中用小火融化白巧克力和可可脂，放在一边。
-* 在搅拌机中加入腰果、枫糖浆和椰奶。搅拌至完全丝滑。加入融化的可可脂并搅拌至混合。将白巧克力混合物倒入刚刚的馅饼上，放入冰箱约 2-3 小时。用糖衣蔓越莓和白巧克力片装饰，这就做好啦。最好 3 天内吃掉i哦。
+* 在搅拌机中加入腰果、枫糖浆和椰奶。搅拌至完全丝滑。加入融化的可可脂并搅拌至混合。将白巧克力混合物倒入刚刚的馅饼上，放入冰箱约 2-3 小时。用糖衣蔓越莓和白巧克力片装饰，这就做好啦。最好 3 天内吃掉哦。
 
 ### Christmas Sangria / 圣诞桑格利亚汽酒
 ![](https://joy3luo.github.io/mathnotes/pics/food/5.jpg)
+
+I’m kicking off  “Christmas Drink Saturday” with this festive sangria. It’s got all the flavors of Christmas + a bottle of wine. Yes, a little white wine, a little ginger beer, a little apple cider, some brandy, a few pears, a few oranges and a bunch of pomegranate arils. It’s definitely on the sweeter side due to the apple cider and ginger, so you have to be into a sweet drink. If you are, this is totally for you, and I gotta say, it’s pretty delicious!
+
+我将用这个节日限定的桑格利亚汽酒开始我的“星期六的圣诞饮料”。 它有圣诞节的所有味道 + 一瓶酒。 是的，一点白葡萄酒、一点姜汁啤酒、一点苹果酒、一些白兰地、一些梨、一些橙子和一束石榴种子皮。 由于苹果酒和生姜，它会更甜，是时候来点甜甜的饮料了。 赶快一起试着做做吧！
+
+![](https://joy3luo.github.io/mathnotes/pics/food/6.jpg)
+
+#### Ingredients
+* 1 (750ml) bottle white wine
+* 1 (12 ounce) ginger beer plus more for topping if desired
+* 1 + 1/2 cups apple cider
+* 1/2 cup brandy
+* 3 pears sliced
+* 3 oranges sliced
+* arils from 1 pomegranate
+* 3 cinnamon sticks
+* cinnamon sugar for the rims of your glasses (optional)
+
+#### 要用到的东西：
+* 1（750ml）瓶白葡萄酒
+* 1（12 盎司）姜汁啤酒，如果需要，还可添加更多用于浇头
+* 1 + 1/2 杯苹果酒
+* 1/2 杯白兰地
+* 3片梨
+* 3片橙子
+* 1个石榴的种子皮
+* 3根肉桂
+
+![](https://joy3luo.github.io/mathnotes/pics/food/7.gif)
+
+#### Instructions
+* In a large pitcher, combine all the ingredient. Stir and then place in the fridge until chilled. Don't chill for longer than a few hours or the ginger beer will lose its fizz.
+
+* Before serving, rim your glasses with cinnamon sugar. Fill each glass with ice and pour the sangria over the ice. If desired top with more ginger beer. Garnish with sliced of pears, oranges and pomegranate arils. Drink up!
+
+#### 做法！
+* 在一个大杯中，混合所有成分。 搅拌，然后放入冰箱直至冷却。 冷藏时间不要超过几个小时，否则姜汁啤酒会没气的。
+
+* 在每个玻璃杯中加入冰块，然后将桑格利亚汽酒倒在冰块上。 如果需要，可以加入更多的姜汁啤酒。 用梨片、橙子和石榴假种皮装饰。 喝起来！
