--- a/_posts/2021-09-02-MSML605.md
+++ b/_posts/2021-09-02-MSML605.md
@@ -1684,15 +1684,25 @@ output:
 ```py
 import random
 
-datal =
+datal = [[random.randint(1,10) for j in range(5)] for i in range(5)]
+datal
+
+output:
+[[5, 5, 8, 3, 5],
+ [6, 5, 6, 10, 2],
+ [8, 9, 7, 4, 9],
+ [9, 10, 6, 2, 1],
+ [10, 2, 1, 4, 8]]
 ```
 
-#####
-
-
+##### Flattening 2D List
 
 ```py
+datal_flattened = [val for row in datal for val in row]
+datal_flattened
 
+output:
+[5, 5, 8, 3, 5, 6, 5, 6, 10, 2, 8, 9, 7, 4, 9, 9, 10, 6, 2, 1, 10, 2, 1, 4, 8]
 ```
 
 #####
