--- a/_posts/2022-01-02-MSML605.md
+++ b/_posts/2022-01-02-MSML605.md
@@ -27,7 +27,9 @@ skipped :3
 #### hello. py
 
 Python does not have a main method like Java
+
 -The program's main code is just written directly in the file
+
 Python statements do not end with semicolons
 
 ```py
@@ -66,9 +68,13 @@ paragraph = """This is a paragraph. It is made up
 #### Comments
 
 As programs get bigger and more complicated, they become more difficult to read
+
 It is a good idea to add notes to your programs
+
 A # symbol that is not inside a string starts a comment
+
 All characters after the # and up to the physical line end are part of the comment
+
 Python interpreter ignores them
 
 
@@ -90,7 +96,9 @@ import sys; x = 'foo'
 #### Multiple Statement Groups as Suites
 
 Groups of individual statements making up a single code block are called suites in Python
+
 Compound or complex statements, such as if, while, def, and class, are those which require a header line and a suite
+
 Header lines begin the statement (with the keyword) and terminate with a colon ( : ) and are followed by one or more lines which make up the suite
 
 ```py
@@ -138,17 +146,25 @@ except lambda yield
 #### Variable Name
 
 Variable names can be both letters and numbers
+
 They have to begin with a letter though
+
 Uppercase letters are allowed, generally we use lowercase
+
 Underscore character (_) can also appear in a name
+
 Variable name cannot be a keyword
+
 An illegal name results in a syntax error
 
 
 #### Assigning Values to Variables
 
 Python variables do not have to be explicitly declared to reserve memory space
-The declaration happens automatically when you assign a value to a variable. The equal sign (=) is used to assign values to variables
+
+The declaration happens automatically when you assign a value to a variable.
+
+The equal sign (=) is used to assign values to variables
 
 ```py
 counter = 100  # An int assignment
@@ -162,7 +178,9 @@ print (name)
 #### Constants
 
 Python doesn't really have constants
+
 Instead, declare a "global" variable at the top of your code
+
 All methods will be able to use this value
 
 ```py
@@ -171,8 +189,7 @@ MAX_VALUE = 3
 
 #### Multiple Assignments
 
-You can also assign a single value to several variables
-simultaneously
+You can also assign a single value to several variables simultaneously
 
 ```py
 a = b = c = 1
@@ -182,37 +199,55 @@ a, b, c = 1, 2, "john"
 #### Data Types
 
 Number types
+
  int
+
  float
+
  complex
 
 Sequence type
+
  str (immutable)
+
  list
+
  tuple (immutable)
+
  range
+
  zip (sequence of tuples)
 
 Boolean type
+
  bool
 
 Set type
+
  set
+
  frozenset
 
 Mapping type
+
  dict
 
 Binary type
+
  bytes
+
  bytearray
+
  memoryview
 
 #### Data Types: Java vs Python
 
 Python is looser about types than Java
+
 Variables' types do not need to be declared
+
 Variable can change type as a program is running
+
 If the variable value is set to a value of a different type
 
 ```py
@@ -223,7 +258,9 @@ a = "john"  # string type
 #### Expressions and Statements
 
 An expression is a combination of values, variables, and operators
+
 A value or variable all by itself is also an expression
+
 ```py
 Examples
 21
@@ -231,14 +268,16 @@ x
 x+21
 ```
 
-A statement is a unit of code that a Python interpreter can
-execute, for example,
+A statement is a unit of code that a Python interpreter can execute, for example,
+
  print
+
  assignment
 
 #### Operators and Operands
 
 Operators represent computations like addition, multiplication, division, etc.
+
 \+  -  *  /  %  **
 
 The values the operator is applied to are called operands
@@ -260,11 +299,15 @@ The values the operator is applied to are called operands
 
 Works on integers
 Yields the remainder of the first operand divided by the second
+
 Indicated by %
+
  Quotient = 7 // 3
+
  Remainder = 7 % 3
 
 Utility: find the last digits of a number
+
 ```py
 >>> 97856 % 100
 56
@@ -273,7 +316,9 @@ Utility: find the last digits of a number
 #### Order of Operations
 
 When multiple operators appear in an expression, the order of evaluation depends on the rules of precedence
+
 Multiplication and division have the same precedence; addition and subtraction have the same precedence
+
 Operators with the same precedence are evaluated from left to right (except exponentiation which has right-to-left precedence)
 
 #### Operators: Java vs Python
@@ -307,7 +352,9 @@ print(d)
 #### str Data Type
 
 Strings in Python are identified as a contiguous set of characters in between quotation marks
+
 Python allows for either pairs of single or double quotes. Subsets of strings can be taken using the slice operator ( [ ] and [ : ] ) with indexes starting at 0 in the beginning of the string and working their way from -1 at the end
+
 The plus ( + ) sign is the string concatenation operator, and the asterisk (*) is the repetition operator
 
 ```py
@@ -333,11 +380,12 @@ Hello World!TEST
 You can’t perform mathematical operations on strings
 
 Examples
+
  ‘2’ - ’1’
+
  ‘eggs’ / ‘dozens’
 
-The + operator works with strings and performs
-concatenations
+The + operator works with strings and performs concatenations
 
 ```py
 first = 'hello'
@@ -351,9 +399,13 @@ helloclass
 #### String Multiplication
 
 The * operator works with strings and performs repetition
+
 Examples
+
  ‘Spam’*3 is ‘SpamSpamSpam’
+
 If one of the operands is a string, the other has to be an integer
+
 ```py
 >>> "hello" * 3
 "hellohellohello"
@@ -366,7 +418,9 @@ yo yo yo yo yo yo yo yo yo yo
 #### String Concatenation
 
 Integers and strings cannot be concatenated in Python
+
 str(value) - converts a value into a string
+
 print(expr, expr)  - prints two items on the same line
 
 ```py
@@ -382,10 +436,12 @@ Thou shalt not count to 4.
 #### list Data Type
 
 Lists are the most versatile of Python's compound data types. A list contains items separated by commas and enclosed within square brackets ([])
+
 To some extent, lists are similar to arrays in C. One difference between them is that all the items belonging to a list can be of different data type
+
 The values stored in a list can be accessed using the slice operator ( [ ] and [ : ] ) with indexes starting at 0 in the beginning of the list and working their way to end-1
-The plus ( + ) sign is the list concatenation operator, and the asterisk
-( * ) is the repetition operator
+
+The plus ( + ) sign is the list concatenation operator, and the asterisk ( * ) is the repetition operator
 
 ```py
 list = [ 'abcd', 786 , 2.23, 'john', 70.2 ]
@@ -436,7 +492,9 @@ abcd
 #### dict Data Type
 
 Python 's dictionaries are hash table type. They work like associative arrays or hashes found in Perl and consist of key-value pairs
+
 Keys can be almost any Python type, but are usually numbers or strings. Values, on the other hand, can be any arbitrary Python object
+
 Dictionaries are enclosed by curly braces ( { } ) and values can be assigned and accessed using square braces ( [] )
 
 ```py
@@ -486,32 +544,43 @@ oct(x) Converts an integer to an octal string
 #### Boolean Expressions
 
 A boolean expression is an expression that is either true or false
+
 It uses the operator '=\=', which compares the operands to the left and the right of this operator
+
 It produces either True or False
+
  for example, 5=\=5 will return True
+
  and 5==6 will return False
 
 True and False are of type bool
 
  x != y # x is not equal to y
+
  x > y # x is greater than y
+
  x < y # x is less than y
+
  x >= y # x is greater than or equal to y
+
  X <= y # x is less than or equal to y
 
 #### Logical Operators
 
 Three logical operators: and, or, and not. For example:
+
  x > 0 and x < 10
+
  This is true only if x is greater than 0 and less than 10
- n%2 == 0 or  n%3 == 0 is true if either of the conditions is
-true, that is, if the number is divisible by 2 or 3
- The not operator negates a boolean expression, so not(x > y)
-is true if x > y is false, that is, if x is less than or equal to y
+
+ n%2 == 0 or  n%3 == 0 is true if either of the conditions is true, that is, if the number is divisible by 2 or 3
+
+ The not operator negates a boolean expression, so not(x > y) is true if x > y is false, that is, if x is less than or equal to y
 
 #### Conditional Execution
 
 We need to check conditions and change the behavior of the program
+
 The simplest conditional statement is if, for example:
 
 The Boolean expression after ‘if’ is called the condition
@@ -526,9 +595,13 @@ x is positive
 #### if Statement
 
 if statements have a header followed by an indented body
+
 Statements like these are called compound statements
+
 There is no limit on the number of statements that can appear in the body, but there must be at least one
+
 Sometimes it is useful to have a body with no statements, usually as a place holder
+
 In that case use the pass statement, which does nothing
 
 ```py
@@ -538,6 +611,7 @@ if x < 0: pass  # need to handle negative values
 #### Alternative Execution
 
 When there are two possibilities and the condition determines which one gets executed
+
 The alternatives are called branches, because they are branches in the flow of execution
 
 ```py
@@ -564,7 +638,9 @@ else:
 ```
 
 There is no limit to the number of elif statements
+
 If there is an else clause, it must be at the end
+
 Each condition is checked in order. If the first one is false, the next is checked, and so on
 
 We don’t need an else statement:
@@ -583,12 +659,17 @@ elif choice == 'c':
 #### Function
 
 A function is some reusable code that
+
 • takes arguments(s) as input
+
 • does some computation and
+
 • returns a result or results
 
 There are two kinds of functions in Python
+
 • Built-in functions that are provided as part of Python - raw_input(), type(), float(), int() ...
+
 • Functions that we define ourselves and then use
 
 We treat the built-in function names as "new" reserved words (i.e., we avoid them as variable names)
@@ -608,47 +689,66 @@ A built-in function is some stored code that we use. It takes some input and pro
 There are built-in functions in Python that convert from one data type to another
 
  The int() function takes any value and converts it into an integer, if it can
+
  int() can convert floating-point values to integers, but it doesn’t round off, and instead chops off the fraction part
+
  float() converts integers and strings to floating-point numbers
+
  str() converts its arguments to string
 
 #### Math Functions
 
 Python has a math module that provides mathematical functions
+
 Before using the module, it needs to be imported `import math`
+
 This module contains the functions and variables defined in the module
+
 To access one of the functions, you have to specify the name of the module and the name of the function
 
 #### Import
+
 Python provides 2 ways to import modules
+
  We have already seen  import math
+
  import statement imports all the functions from a module into the code
 
 We can also import functions using  from
+
  Imports only the specified function
+
  Syntax
+
   from [module] import [function or value]
+
   from random import choice
 
 #### Counting and Iterating Functions
 
-
 len: returns the number of items of an enumerable object
+
 ```py
 >>> len( [‘c’, ‘m’, ‘s’, ‘c’, 3, 2, 0] )
 7
 ```
+
 range: returns an iterable object
+
 ```py
 >>> list( range(10) )
 [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
 ```
+
 enumerate: returns iterable tuple (index, element) of a list
+
 ```py
 >>> enumerate( [“311”, “320”, “330”] )
 [(0, “311”), (1, “320”), (2, “330”)]
 ```
+
 map: apply a function to a sequence or iterable
+
 ```py
 >>>arr = [1, 2, 3, 4, 5]
 >>>map(lambda x: x**2, arr)
@@ -660,6 +760,7 @@ map: apply a function to a sequence or iterable
 [3, 7, 11, 15, 19]
 ```
 filter: returns a list of elements for which a predicate is true
+
 ```py
 >>>arr = [1, 2, 3, 4, 5, 6, 7]
 >>> filter(lambda x: x % 2 == 0, arr)
@@ -669,13 +770,19 @@ filter: returns a list of elements for which a predicate is true
 #### User-Defined Functions
 
 A named sequence of statements that perform a certain computation
+
 After defining a function, you can call it by name
+
  Example: type(34)
 
 Why Define & Use Functions?
+
  A group of statements gets a name
+
  Modular code
+
  Easier debugging
+
  Code reuse
 
 ```py
@@ -688,12 +795,15 @@ hello()
 hello()
 ```
 Must be declared above the 'main' code
+
 Statements inside the function must be indented
 
 #### Whitespace Significance
 
 Python uses indentation to indicate blocks, instead of {}
+
  Makes the code simpler and more readable
+
  In Java, indenting is optional.  In Python, you must indent
 
 ```py
@@ -709,13 +819,17 @@ hello()
 #### Arguments, Parameters, Variables
 
 Most functions require arguments
+
  E.g.: math functions
 
 An expression can also be used as an argument
 
 Inside the function, arguments are assigned to variables called parameters
+
  Parameters are local to the function
+
 Some functions return a value and others return nothing (void)
+
 A variable created inside a function is local
 
 ```py
@@ -747,7 +861,9 @@ decide(z,y)
 #### Iterations
 
 Involves repetition
+
 A statement or group of statements that need to be repeated
+
 Help in automation of repeated tasks
 
 #### The for Loop
@@ -849,6 +965,7 @@ output:
 #### Concatenating Ranges
 
 Ranges can be concatenated with +
+
  Can be used to loop over a disjoint range of numbers
 
 ```py
@@ -869,9 +986,11 @@ Ranges can be concatenated with +
 #### while Loop
 
 In the definition there is no starting iterator
+
 We need to use a condition with the while
 
 It requires a condition, e.g.,
+
 ```py
 n = 12
 while(n >0):
@@ -882,13 +1001,17 @@ while(n >0):
 #### Execution Flow for a while Loop
 
 At the start of each iteration, evaluate the condition, yielding True or False
+
 If the condition is false, exit the while statement and continue execution at the next statement
+
 If the condition is true, execute the body and then go to the condition again
+
 The body of the loop will change the value of one or more variables so that condition eventually becomes false and the loop terminates
 
 #### break Statement
 
 Sometimes we want to break out of a loop if some
+
 condition is satisfied
 
 ```py
@@ -914,10 +1037,13 @@ output:
 #### String
 
 A sequence type
+
 A sequence of zero or more characters
+
   course = “MSML 605”
 
 A string is delimited (begins and ends) by single or double quotes
+
 The empty string has zero characters ('' or "")
 
 ```py
@@ -929,6 +1055,7 @@ exclamation = "That makes me !#? "
 Quote Characters in Strings
 
  You can include a single quote in a double quoted string or a double quote in a single quoted string
+
 ```py
 will = "All the world's a stage"
 ben = 'BF: "A penny saved is a penny earned"'
@@ -943,6 +1070,7 @@ All the world's a stage
 ```
 
  The same goes for double quotes
+
 ```py
 >>> ben = "BF: \"A penny saved is a penny earned\""
 >>> print(ben)
@@ -952,8 +1080,9 @@ BF: "A penny saved is a penny earned"
 Putting a Format Character in a String
 
  A format character is interpreted by the print() function to change the layout of text
- To put a format character in a string, precede it with the
-backslash ('\')
+
+ To put a format character in a string, precede it with the backslash ('\')
+
  A newline is represented by '\n'  
 
 ```py
@@ -964,6 +1093,7 @@ Parting is such sweet sorrow
 ```
 
  A tab is represented by '\t'
+
 ```py
 >>> tabs = 'col0\tcol1\tcol2'
 >>> print(tabs)
@@ -973,7 +1103,9 @@ col0 col1 col2
 #### Bracket operator and Index
 
 You can access the characters one at a time with the bracket operator
+
 The first character has index 0
+
 `second_character = course[1]`
 
 ```py
@@ -1071,6 +1203,7 @@ abcdef
 #### String Slices
 
 A segment of a string is a slice
+
 Selecting a slice is similar to selecting a character
 
 The operator [n:m] returns the part of the string from the “n-eth” character to the “m-eth” character
@@ -1086,6 +1219,7 @@ It includes the first but excludes the last
 ```
 
 If the first index before the colon is omitted, the slice starts at the beginning of the string.
+
 If you omit the second index, the slice goes to the end of the string
 
 ```py
@@ -1094,6 +1228,7 @@ hell world
 ```
 
 If the first index >= second index, the result is an empty string
+
 You can pick every kth element if you like
 
 ```py
@@ -1104,6 +1239,7 @@ You can pick every kth element if you like
 #### Strings Are Immutable
 
 Once created, a string cannot be modified
+
 What happens if [ ] operators are used on the left side of the assignment operator?
 
 ```py
@@ -1116,6 +1252,7 @@ What happens if [ ] operators are used on the left side of the assignment operat
 #### String Search
 
 find is the opposite of the [ ] operator
+
 Instead of taking an index and extracting the corresponding character, it takes a character and finds an index
 
 ```py
@@ -1147,8 +1284,11 @@ output:
 #### upper() Method
 
 A method is a function that is bundled together with an object: it takes arguments and returns a value
+
 A method call is called an invocation
+
 We are invoking upper() on word
+
 ```py
 word = 'banana'
 word = word.upper()
@@ -1161,6 +1301,7 @@ OUTPUT
 #### find() Method
 
 There is a string method named ‘find()’
+
 We invoke find() on word
 
 ```py
@@ -1170,10 +1311,13 @@ print (index)  # will print 1, the first instance of 'a'
 ```
 
 find() can also find substrings not just characters
+
 `word.find('na')`
 
 It can take as a second argument the index where it
+
 should start:
+
 `word.find(‘na’,3)`
 
 As a third argument the index where it should stop:
@@ -1186,13 +1330,17 @@ name.find(‘b’,1,2)
 #### in Operator
 
 The word ‘in’ is a Boolean operator that takes two strings and returns true if the first appears as a substring in the second
+
 `‘a’ in ‘banana’`
+
 `‘seed’ in ‘banana’`
 
 #### String Comparison
 
 Relational operators work on strings
+
 Equality operator ‘==’
+
 Other relational operations are useful for putting words in alphabetical order:
 
 ```py
@@ -1207,47 +1355,70 @@ else:
 #### String Operationss
 
  "hello"+"world" "helloworld"      # concatenation
+
  "hello"*3 "hellohellohello" # repetition
+
  "hello"[0] "h"      # indexing
+
  "hello"[-1] "o"      # (from end)
+
  "hello"[1:4] "ell"      # slicing
+
  len("hello") 5      # size
+
  "hello" < "jello" 1      # comparison
+
  "e" in "hello" 1      # search
+
  New line:  "escapes: \n "
+
  Line continuation:  triple quotes ’’’
+
  Quotes:  ‘single quotes’, "raw strings"
 
 #### String Methods
 
  upper()
+
  lower()
+
  capitalize()
+
  count(s)
+
  find(s)
+
  rfind(s)
+
  index(s)
+
  strip(), lstrip(), rstrip()
+
  replace(a, b)
+
  expandtabs()
+
  split()
+
  join()
+
  center(), ljust(), rjust()
 
 ### Lists
 
 A sequence type
+
 A sequence of values
+
 These values can be of any type
+
 Values in a list are called items or elements
 
-```py
-
-```
 
 #### Lists are Mutable
 
 The syntax for accessing list elements is the same as for accessing string characters
+
 The expression inside brackets specifies the index
 
 ```py
@@ -1260,6 +1431,7 @@ The expression inside brackets specifies the index
 #### Mapping
 
 You can think of a list as a mapping between indices and elements
+
 Each index “maps to” one of the elements
 
 `num = [2, 34, 56]`
@@ -1267,10 +1439,12 @@ Each index “maps to” one of the elements
 #### Indices
 
 List indices work the same way as string indices
+
  Any integer expression can be used as an index
+
  if you try to read or write an element that does not exist, you get an IndexError
- If an index has a negative value, it counts backward from the end
-of the list
+
+ If an index has a negative value, it counts backward from the end of the list
 
 #### ‘in’ Operator
 
@@ -1285,7 +1459,9 @@ cheeses = [“Cheddar”, “Mozzarella”, “Blue”]
 #### Traversing a List
 
 The most common way is with a ‘for’ loop
+
 Syntax is the same as for strings
+
 This works well if you only need to read the elements
 
 ```py
@@ -1295,7 +1471,9 @@ for cheese in cheeses:
 ```
 
 If you want to write or update the elements, you need the indices
+
 Common way is to combine functions ‘range’ and ‘len'
+
 This loop traverses the list and updates each element
 
 ```py
@@ -1306,6 +1484,7 @@ for i in range(len(numbers)):
 #### Nested Lists
 
 A list can contain another list
+
 `[‘spam’, 1, [‘Brie’, 5, 3.2], 2, [2, 5, 6]]`
 
 Each internal list still counts as a single element
@@ -1346,7 +1525,9 @@ Slice operator also works on lists
 ```
 
 If you omit the first index, the slice starts at the beginning
+
 If you omit the second, the slice goes to the end
+
 If you omit both, the slice is a copy of the whole list
 
 ```py
@@ -1357,6 +1538,7 @@ If you omit both, the slice is a copy of the whole list
 #### append() Method
 
 Python provides methods that operate on lists
+
 append adds a new element to the end of a list
 
 ```py
@@ -1369,6 +1551,7 @@ append adds a new element to the end of a list
 #### extend() Method
 
 extend takes a list as an argument and appends all of the elements
+
 t2 is unmodified
 
 ```py
@@ -1382,6 +1565,7 @@ t2 is unmodified
 #### sort() Method
 
 sort arranges the elements of the list from low to high
+
 List methods are all void; they modify the list and return None
 
 ```py
@@ -1390,10 +1574,6 @@ List methods are all void; they modify the list and return None
 >>> print(t)
 [‘a’, ‘b’, ‘c’, ‘d’, ‘e’]
 ```
-
-####
-
-
 
 ```py
 # Create a list t, 1,5,6,7
@@ -1444,6 +1624,7 @@ t.remove('b')
 ```
 
 The return value from remove is None
+
 To remove more than one element, use del statement
 
 ```py
@@ -1454,8 +1635,11 @@ del t[1:5]
 #### Strings vs. Lists
 
  A string is a sequence of characters
+
  A list is a sequence of values
+
  A list of characters is not the same as a string
+
  A string is immutable whereas a list is mutable
 
 ```py
@@ -1490,6 +1674,7 @@ A delimiter specifies which characters to use as word boundaries while splitting
 #### join() Method
 
 join() is the inverse of split()
+
 It takes a list of strings and concatenates the elements to form a single string
 
 ```py
@@ -1502,6 +1687,7 @@ It takes a list of strings and concatenates the elements to form a single string
 #### Objects and Values
 
 a and b both refer to a string, but we don’t know whether they refer to the same string
+
 To determine, we can use the ‘is’ operator
 
 ```py
@@ -1531,8 +1717,11 @@ True
 #### List Arguments
 
 When you pass a list to a function, the function gets a reference to the list
+
 If the function modifies a list parameter, the caller sees the change
+
 Some operations modify lists and other operations create new lists
+
 append() method modifies a list, but the + operator creates a new list
 
 ```py
@@ -1565,6 +1754,7 @@ output:
 None of that has any effect on the list passed as an argument
 
 If we want to slice a list we can return it
+
 The list leaves the original list unmodified
 
 ```py
@@ -1583,28 +1773,45 @@ output:
 #### List Operations
 
  append
+
  insert
+
  index
+
  count
+
  sort
+
  reverse
+
  remove
+
  pop
+
  extend
 
  Indexing e.g., L[i]
+
  Slicing e.g., L[1:5]
+
  Concatenation e.g., L + L
+
  Repetition e.g., L * 5
+
  Membership test e.g., ‘a’ in L
+
  Length e.g., len(L)
 
 #### List Comprehension
 
  List comprehensions offer a succinct way to create lists based on existing lists
+
  When using list comprehensions, lists can be built by leveraging any iterable, including strings and tuples
+
  Syntactically, list comprehensions consist of an iterable containing an expression followed by a for clause
+
  General Syntax
+
 `[<output value> <iterator> <conditional stmt>]`
 
 #### Squaring Numbers
@@ -1699,6 +1906,7 @@ output:
 
 ```py
 datal_flattened = [val for row in datal for val in row]
+
 datal_flattened
 
 output:
@@ -1710,9 +1918,13 @@ output:
 #### Introduction
 
  A sequence type
+
  A sequence of values
+
  They are indexed and a lot like lists
+
  A comma-separated list of values
+
  It is common to enclose tuples in parentheses
 
 ```py
@@ -1726,7 +1938,9 @@ output:
 #### Tuples
 
 What is a tuple?
+
  A sequence of values whose elements cannot be modified once it is created
+
  In other words, it's a read-only array
 
 ```py
@@ -1741,19 +1955,23 @@ What is a tuple?
 #### List vs. Tuple
 
 What are common characteristics?
+
  Both store arbitrary data objects
+
  Both are of sequence data type
 
 What are differences?
+
  Tuple doesn’t allow modification
+
  Tuple doesn’t have methods??
+
  Tuple supports format strings
+
  Tuple supports variable length parameter in function call
+
  Tuple slightly faster
 
-```py
-
-```
 
 #### Tuples
 
@@ -1792,7 +2010,9 @@ l
 #### Slice Operator
 
 Slicing
+
 If you try to modify one of the elements of the tuple
+
 Tuples are immutable
 
 ```py
@@ -1858,6 +2078,7 @@ output:
 ```
 
 #### Variable-Length Argument Tuples
+
 Functions can take a variable number of arguments
 
 A parameter name that begins with a * gathers arguments into a tuple, for example
@@ -1874,6 +2095,7 @@ output:
 #### Variable Length Arguments
 
 Many of the built-in functions use variable-length argument tuples
+
 For example, max() and min() can take any number of arguments:
 
 ```py
@@ -1916,10 +2138,15 @@ output:
 #### Tuple Operations
 
  Indexing e.g., T[i]
+
  Slicing e.g., T[1:5]
+
  Concatenation e.g., T + T
+
  Repetition e.g., T * 5
+
  Membership test e.g., ‘a’ in T
+
  Length e.g., len(T)
 
 ### Lambda Functions
@@ -1927,17 +2154,25 @@ output:
 #### Anonymous (Lambda) Functions
 
  An anonymous function is a function that is defined without a name
+
  While normal functions are defined using the def keyword, anonymous functions are defined using the lambda keyword
+
  Anonymous functions are typically small, and are used to parameterize an expression
+
  They are typically created near where they are used
+
  They can take any number of arguments but return just one value in the form of an expression. They cannot contain commands or multiple expressions
+
  They are used in combination with the functions filter(), map(), and reduce()
 
 #### Lambda Function Syntax
 
  Syntax
+
    lambda \<argumentlist>: \<expression>
+
  Argument list consists of a comma separated list of arguments
+
  Expression is an arithmetic expression using these arguments
 
 ```py
@@ -2583,17 +2818,7 @@ For example, the format sequence ‘%d’ means that the second operand should b
 
 
 ```py
-class Employee:
-  x = 0
-  y = 1
-  def __init__(self, x,y):
-    self.x = x
-    self.y = y
-  def kkk(self):
-    return (self.x + self.y)
-j = Employee(1,2)
 
-j.kkk() 
 
 
 ```
