--- a/_posts/2022-01-02-MSML605.md
+++ b/_posts/2022-01-02-MSML605.md
@@ -2820,19 +2820,19 @@ print ('%s is %d years old' % ('Joe', 42)) #Joe is 42 years old
 
 #### More Formatting
 
- A format sequence can appear anywhere in the string
+• A format sequence can appear anywhere in the string
 
- So you can embed a value in a sentence
+• So you can embed a value in a sentence
 
 ```py
 camels = 42
 'I have spotted %d camels.' % camels ##'I have spotted 42 camels.'
 ```
- For more than one format sequence in a string, the second argument is a tuple
+• For more than one format sequence in a string, the second argument is a tuple
 
- Each format sequence with an element of the tuple, in order
+• Each format sequence with an element of the tuple, in order
 
- Format Sequences used to format
+• Format Sequences used to format
 
 ‘%d’ an integer
 
@@ -2848,9 +2848,9 @@ camels = 42
 
 #### Sequence Formatting Rules
 
- The number of elements in the tuple has to match the number of format sequences in the string
+• The number of elements in the tuple has to match the number of format sequences in the string
 
- Also, the types of the elements have to match the format sequences
+• Also, the types of the elements have to match the format sequences
 
 ```py
 '%d %d %d' % (1,2)
@@ -2874,7 +2874,7 @@ TypeError: %d format: a real number is required, not str
 
 #### Filenames and Paths
 
- import os: os module provides functions for working with files and directories
+• import os: os module provides functions for working with files and directories
 
 ```py
 >>> import os
@@ -2883,33 +2883,33 @@ TypeError: %d format: a real number is required, not str
 /users/george
 ```
 
- To find the absolute path to a file, you can use os.path.abspath
+• To find the absolute path to a file, you can use os.path.abspath
 
 ```py
 >>> os.path.abspath('words')
 '/users/george/words'
 ```
 
- os.path.exists checks whether a file or directory exists
+• os.path.exists checks whether a file or directory exists
 
 ```py
 >>> os.path.exists('words.txt')
 False
 ```
- os.path.isdir checks whether it’s a directory
+• os.path.isdir checks whether it’s a directory
 
 ```py
 >>> os.path.isdir('Documents')
 True
 ```
- os.path.isfile checks whether it’s a file
+• os.path.isfile checks whether it’s a file
 
 ```py
 >>> os.path.isfile('test')
 True
 ```
 
- os.listdir returns a list of the files ( and other directories) in the given directory
+• os.listdir returns a list of the files ( and other directories) in the given directory
 
 ```py
 >>> os.listdir('/users')
@@ -2936,21 +2936,21 @@ f.endswith('.jpg')]
 
 #### Catching Exceptions
 
- If you try to open a file that doesn’t exist, it will throw an error:
+• If you try to open a file that doesn’t exist, it will throw an error:
 
 ```py
 fin = open('our_file')
 FileNotFoundError: [Errno 2] No such file or directory: 'our_file'
 ```
 
- If you don’t have permission to access a file:
+• If you don’t have permission to access a file:
 
 ```py
 fout = open('/etc/passwd','w')
 PermissionError: [Errno 13] Permission denied: '/etc/passwd'
 ```
 
- If you try to open a directory for reading, you get:
+• If you try to open a directory for reading, you get:
 
 ```py
 fin = open('/home')
@@ -2959,7 +2959,7 @@ IsADirectoryError: [Errno 21] Is a directory: '/home'
 
 #### try and except
 
- There is an option using 'try' and 'except' so that the program does not halt when there is an error
+• There is an option using 'try' and 'except' so that the program does not halt when there is an error
 
 ```py
 try:
@@ -2971,15 +2971,15 @@ except:
   print('Something went wrong')
 ```
 
- Python starts by executing the try clause
+• Python starts by executing the try clause
 
- If all goes well, it skips the except clause and proceeds
+• If all goes well, it skips the except clause and proceeds
 
- If an exception occurs, it jumps out of the try clause
+• If an exception occurs, it jumps out of the try clause
 
 #### Pickling
 
- A pickle module is used to store Python objects in a database
+• A pickle module is used to store Python objects in a database
 
 ```py
 import pickle
@@ -2989,7 +2989,7 @@ t2 = pickle.load(open(“temp”, “rb”))
 print(t2) # prints [1, 2, 3]
 ```
 
- Although the new object has the same value as the old, it is not the same object
+• Although the new object has the same value as the old, it is not the same object
 
 ```py
 print (t == t2)  # True
@@ -3017,36 +3017,36 @@ b'\x80\x03}q\x00(X\x02\x00\x00\x00k1q\x01X\x02\x00\x00\x00v1q\x02X\x02\x00\x00\x
 
 Objects, classes, instances, and object-oriented programming
 
- Relationship between classes and instances
+• Relationship between classes and instances
 
- Abstraction
+• Abstraction
 
 Anatomy of a class
 
- Instance variables
+• Instance variables
 
- Instance methods
+• Instance methods
 
- Constructors
+• Constructors
 
 #### Object-Oriented Basics
 
 Object: A single software unit that combines attributes and methods
 
- Attribute: A "characteristic" of an object; like a variable associated with a kind of object
+• Attribute: A "characteristic" of an object; like a variable associated with a kind of object
 
- Method: A "behavior" of an object; like a function associated with a kind of object
+• Method: A "behavior" of an object; like a function associated with a kind of object
 
 Class: Code that defines the attributes and methods of a kind
 of object (A class is a blueprint of an object)
 
- Classes we have seen so far: str, list, dict, etc.
+• Classes we have seen so far: str, list, dict, etc.
 
 OOP (Object-oriented programming) allows
 
- representation of real-life objects as software objects (e.g., a dictionary as an object)
+• representation of real-life objects as software objects (e.g., a dictionary as an object)
 
- writing programs that perform most of their behavior as interactions between objects
+• writing programs that perform most of their behavior as interactions between objects
 
 #### Fundamental Concepts of OOP
 
@@ -3056,19 +3056,19 @@ Abstraction
 
 Encapsulation
 
- hiding design details to make the program clearer and more easily modified later
+• hiding design details to make the program clearer and more easily modified later
 
 Modularity
 
- the ability to make objects stand alone so they can be reused
+• the ability to make objects stand alone so they can be reused
 
 Polymorphism
 
- Allow one message to be sent to any object and have it respond appropriately based on the type of object it is
+• Allow one message to be sent to any object and have it respond appropriately based on the type of object it is
 
 Inheritance
 
- create a new object by inheriting (like father to son) many object characteristics while creating or over-riding for this object
+• create a new object by inheriting (like father to son) many object characteristics while creating or over-riding for this object
 
 #### Abstraction
 
@@ -3092,32 +3092,32 @@ Encapsulation provides abstraction: we can use objects without knowing how they 
 
 The object has:
 
- an external view (its behavior)
+• an external view (its behavior)
 
- an internal view (the state and methods that  accomplish the behavior)
-
-#### Class versus Instance
-
- The analogy of the cookie cutter and cookie
-
- The cutter is a template for stamping out cookies; the cookie is what is made each time the cutter is used
-
- One template can be used to make an infinite number of cookies, each one having the same shape as the other
-
- No one confuses a cookie for a cookie cutter, do they?
+• an internal view (the state and methods that  accomplish the behavior)
 
 #### Class versus Instance
 
- You define a class as a blueprint to generate new instances of that class
+• The analogy of the cookie cutter and cookie
 
- Instances are objects that are created based on the definition given
+• The cutter is a template for stamping out cookies; the cookie is what is made each time the cutter is used
+
+• One template can be used to make an infinite number of cookies, each one having the same shape as the other
+
+• No one confuses a cookie for a cookie cutter, do they?
+
+#### Class versus Instance
+
+• You define a class as a blueprint to generate new instances of that class
+
+• Instances are objects that are created based on the definition given
 inside the class
 
- Both the class and the instances are themselves objects
+• Both the class and the instances are themselves objects
 
- The structure of each instance starts out  the same, as dictated by the class
+• The structure of each instance starts out  the same, as dictated by the class
 
- The instances respond to the methods defined as part of the class
+• The instances respond to the methods defined as part of the class
 
 #### Class versus Instance
 ```py
@@ -3185,16 +3185,16 @@ choose random song
 
 In case you haven’t noticed, everything in Python is really an object
 
- We’ve seen hints of this already through built-in classes and their methods ...
+• We’ve seen hints of this already through built-in classes and their methods ...
 ```py
 "hello".upper()
 list3.append('a')
 dict2.keys()
 ```
 
- These look like Java or C++ method calls
+• These look like Java or C++ method calls
 
- We can define new object classes in addition to these built-in data-types
+• We can define new object classes in addition to these built-in data-types
 
 In fact, programming in Python is typically done in an object-oriented fashion
 
@@ -3204,25 +3204,25 @@ There is a strong similarity between Python data types and Python classes
 
 Data types
 
- Seen many data types already: list, dict, str, ...
+• Seen many data types already: list, dict, str, ...
 
- Suitable for representing different data
+• Suitable for representing different data
 
- Respond to different methods regarding the manipulation of that data
+• Respond to different methods regarding the manipulation of that data
 
- Classes are more complicated, user-defined data types
+• Classes are more complicated, user-defined data types
 
 #### Standard Class Names
 
 The standard way to name a class in Python is called CapWords
 
- Each word of a class begins with a Capital letter
+• Each word of a class begins with a Capital letter
 
- No underlines
+• No underlines
 
- Sometimes called CamelCase
+• Sometimes called CamelCase
 
- Makes it easier to recognize a class
+• Makes it easier to recognize a class
 
 #### Defining a Class
 
@@ -3248,9 +3248,9 @@ The class definition is terminated by a blank line
 
 The class description may define:
 
-  a set of variables (attributes)
+•  a set of variables (attributes)
 
- A set of methods
+• A set of methods
 
 Variables are for storing data
 
@@ -3260,11 +3260,11 @@ Methods are for specifying behavior
 
 Owned by the class as a whole  
 
- All class instances have access to the class variable
+• All class instances have access to the class variable
 
- They share the same value for it
+• They share the same value for it
 
- If one instance changes the value, all instances see the change
+• If one instance changes the value, all instances see the change
 
 Called “static” variables in some languages  
 
@@ -3272,19 +3272,19 @@ Stored in pre-defined class variable ClassName.__dict__
 
 Good for
 
- class-wide constants
+• class-wide constants
 
- building counter of how many instances of the class have been made
+• building counter of how many instances of the class have been made
 
 #### Declaring a Class Attribute
 
 A class attribute can be declared and initialized
 
- Inside class, but outside of any method
+• Inside class, but outside of any method
 
- In constructor methods
+• In constructor methods
 
- Outside class
+• Outside class
 
 ```py
 class Point:
@@ -3320,15 +3320,15 @@ class Point:
 
 When Python encounters a class definition, it automatically creates a function with the same name as the class
 
- This function is called a constructor
+• This function is called a constructor
 
 By calling the constructor function (with no parameters), you can create an instance of the class
 
- Creates an empty object
+• Creates an empty object
 
- Good to assign the result to a variable (name of created instance)
+• Good to assign the result to a variable (name of created instance)
 
- Instance inherits a personal set of variables (same names as the class variables)
+• Instance inherits a personal set of variables (same names as the class variables)
 
 ```py
 class Point:
@@ -3417,25 +3417,25 @@ The non-method data stored by objects are called attributes
 
 Instance attributes
 
- Owned by a particular instance of a class
+• Owned by a particular instance of a class
 
- Each instance has its own value for it
+• Each instance has its own value for it
 
- These are the most common kind of attribute
+• These are the most common kind of attribute
 
 Class attributes
 
- Owned by the class as a whole  
+• Owned by the class as a whole  
 
- All class instances share the same value for it
+• All class instances share the same value for it
 
- Called “static” variables in some languages  
+• Called “static” variables in some languages  
 
 Good for:
 
- class-wide constants
+• class-wide constants
 
- keeping count of how many instances of the class have been made
+• keeping count of how many instances of the class have been made
 
 #### Instance vs. Class Attributes
 
@@ -3680,7 +3680,7 @@ test class
 ```
 
 
-#### 
+####
 
 ```py
 
